# pycep

./: .gitignore  Pipfile  pyproject.toml  setup.py
pycep/: __init__.py  cli.py
pycep/decorators/: try_request.py
pycep/models/: cep.py
pycep/services/: cep_service.py
snap/: snapcraft.yaml
src/: cli.py
src/services/: cep_service.py
tests/: test_cep.py  test_cli.py
tests/cassetts/: test_request_by_cep.yaml
